--- a/app/src/main/res/layout/voting_type_list_element.xml
+++ b/app/src/main/res/layout/voting_type_list_element.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:id="@+id/custom_grid_layout">
+    android:id="@+id/voting_type_list_custom_grid">
 
     <androidx.cardview.widget.CardView
         android:layout_width="0dp"
@@ -25,10 +25,12 @@
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+
 
             <ImageView
-                android:id="@+id/newsImage"
+                android:id="@+id/candidateImage"
                 android:layout_width="50dp"
                 android:layout_height="50dp"
                 android:layout_marginStart="8dp"
@@ -39,17 +41,29 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                android:contentDescription="@string/news_image_description" />
+                android:contentDescription="@string/voting_type_list_element_image_description" />
 
             <TextView
-                android:id="@+id/newsTitle"
+                android:id="@+id/candidateName"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
-                android:text="@string/news_title"
+                android:text="@string/voting_type_list_element_candidate_name"
+                android:textSize="24sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/newsImage" />
+                app:layout_constraintTop_toBottomOf="@+id/candidateImage" />
+
+            <CheckBox
+                android:id="@+id/voteCheckbox"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:text="@string/voting_type_list_element_checkbox"
+                android:textSize="24sp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/candidateName" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.cardview.widget.CardView>
