--- a/app/src/main/res/layout/voter_fragment.xml
+++ b/app/src/main/res/layout/voter_fragment.xml
@@ -49,7 +49,9 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:ems="10"
-            android:inputType="date" />
+            android:inputType="date"
+            android:focusable="false"
+            />
 
         <TextView
             android:id="@+id/textView4"
